[package]
name = "rota"
version = "0.1.0"
authors = ["evan <evanmolder@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1.0.0"
actix-files = "0.2.1"
chrono = "0.4.11"
serde = "1.0.106"
serde_derive = "^1.0.8"
lazy_static = "1.4.0"
config = "0.10.1"
dirs = "2.0.2"